--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,5 @@ tavily-python>=0.3.0
 google-generativeai>=0.8.0
 google-adk>=0.1.0
 pandas>=2.0.0
-cohere>=4.0.0 
+cohere>=4.0.0
+markdown>=3.5.0 
